--- a/www/index.html
+++ b/www/index.html
@@ -197,6 +197,11 @@
     // ButtonCがクリックされた時の処理
     function btnCClick(e){
         alarm();
+        ctive = false;
+        period = 60* parseInt( $("#minute").val() ) + 
+        parseInt( $("#second").val() );
+        $("#time").html("経過時間： 0");
+        $("#remain").html("残り時間： " + period);
         
     }
     
