--- a/www/index.html
+++ b/www/index.html
@@ -238,8 +238,8 @@
     <div id="time">Time</div>
     <button id="btnA">Start</button>  
     <button id="btnB">Stop</button>  
-    <button id="btnC"></button>  
-    <input type="number" id="minute" value=3 >
-    <input type="number" id="second" value=0 >
+    <button id="btnC">Set</button>  
+    <input type="number" id="minute" value=0 >
+    <input type="number" id="second" value=15 >
 </body>
 </html>
