関数Dsoundを追加

--- a/www/index.html
+++ b/www/index.html
@@ -185,6 +185,13 @@
         audio.play();
 
     }
+
+    function Dsound(){
+        var audio = new Audio();
+        audio.src = "pin.wav";
+        audio.play();
+
+}
     
     // ButtonAがクリックされた時の処理
     function btnAClick(e){
