--- a/www/index.html
+++ b/www/index.html
@@ -230,8 +230,9 @@
     }
       // ButtonEがクリックされた時の処理
     function btnEClick(e){
-      active = true;   
-     startTime = new Date(startTime);
+      active = true; 
+      startTime = new Date() - (period - rest) * 1000;  
+      startTime = new Date(startTime);
 }
  
     // 繰り返し実行する処理
