--- a/www/index.html
+++ b/www/index.html
@@ -268,7 +268,7 @@
     <button id="btnA">Start</button>  
     <button id="btnB">Stop</button>  
     <button id="btnC">Set</button>
-    <button id="btnD">Dボタン</button> 
+    <button id="btnD">Dボタン(音が鳴る)</button> 
     <button id="btnE">再開ボタン</button> 
     <input type="number" id="minute" value=0 >
     <input type="number" id="second" value=30 >
